1998-11-28  Yo Ric Dude  <ricdude@ix.netcom.com>

	* configure.in: --enable-esdplay has been converted to
 	--with-libaudiofile. some files of the esound source WILL NOT
 	currently compile unless libaudiofile is installed.  with the
 	inclusion of the audio file handling routines, libaudiofile is now
 	a requirement for esound.  Anyone wishing to patch the source so
 	it will still compile without libaudiofile is welcome to.

	* esd.h, esdfile.c, esdplay.c, esdsample.c: add a string to
	differentiate between sample files cached by different programs with
	the same name.

	* Makefile.am, esdfile.c, esd.h: added convenient audiofile
	wrappers for playing and caching audio file data. 
	* esd.h, esdlib.c: const clean up.
	* esdmgr.c: added name to print info functions.
	* esdplay.c, esdsample.c: updated to use audiofile wrappers.
	NOTE: this means that the AUDIOFILE library is now REQUIRED for
	proper compilation of esound.  configure.in will be updated soon.
	
Mon Nov 23 06:34:43 PST 1998 Manish Singh <yosh@gimp.org>

	* configure.in: allow manual enable/disabling of alsa support

1998-10-21 Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr>

        * use the audiofile.m4 macro to detect libaudiofile

1998-11-09  Yo Ric Dude  <ricdude@ix.netcom.com>

	* clients.c, esdlib.c, filter.c, mix.c, players.c, proto.c
	samples.c: use the freshly updated debugging macros

	* esd-server.h, esd.h, esdctl.c, esdlib.c, esdmgr.c, mix.c,
	players.c, proto.c, samples.c: initial support for setting stereo
	panning of streams and samples, just need to update mix.c to do
	the scaling...

Sat Nov  7 05:28:03 PST 1998 Manish Singh <yosh@gimp.org>

	* esddsp.c: Hmmph. The ES1370 driver blocks on open unless
	O_NONBLOCK is set explictly. So now we strcmp always, and
	set O_NONBLOCK on fallback only for the sound device.

	* esdlib.c: removed fsync's here too

1998-11-06  Yo Ric Dude  <ricdude@ix.netcom.com>

	* samples.c, players.c, proto.c: fixed rounding to multiple of 4